--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <li class="noVNC_version_separator"><hr></li>
                     <li class="noVNC_version_wrapper">
                         <span>Version:</span>
-                        <span class="noVNC_version"></span>
+                        <span>22.06</span>
                     </li>
                 </ul>
             </div>
