--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
                         <div class="noVNC_expander">Advanced</div>
                         <div><ul>
                             <li>
-                                <label for="noVNC_setting_quality">Quality:</label>
+                                <label for="noVNC_setting_quality">画质:</label>
                                 <input id="noVNC_setting_quality" type="range" min="0" max="9" value="6">
                             </li>
                             <li>
-                                <label for="noVNC_setting_compression">Compression level:</label>
+                                <label for="noVNC_setting_compression">压缩级别:</label>
                                 <input id="noVNC_setting_compression" type="range" min="0" max="9" value="2">
                             </li>
                             <li><hr></li>
@@ -228,7 +228,7 @@
                             </li>
                             <li><hr></li>
                             <li>
-                                <label><input id="noVNC_setting_show_dot" type="checkbox"> Show Dot when No Cursor</label>
+                                <label><input id="noVNC_setting_show_dot" type="checkbox"> 显示轨迹点</label>
                             </li>
                             <li><hr></li>
                             <!-- Logging selection dropdown -->
@@ -242,8 +242,8 @@
                     </li>
                     <li class="noVNC_version_separator"><hr></li>
                     <li class="noVNC_version_wrapper">
-                        <span>Version:</span>
-                        <span>22.06</span>
+                        <span>版本:</span>
+                        <span>22.06.1</span>
                     </li>
                 </ul>
             </div>
